packages/typ/tests/fixtures/diagnostics/0616_functor_call_abstract_function_int_07.ml.infer.expected
File "0616_functor_call_abstract_function_int_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0616_functor_call_abstract_function_int_07 is not a valid module name.

File "0616_functor_call_abstract_function_int_07.ml", line 7, characters 15-16:
7 |   let y = X.id 6
                   ^
Error: The constant 6 has type int but an expression was expected of type X.t
