packages/typ/tests/fixtures/diagnostics/0616_functor_call_abstract_function_int_07.ml
module type Arg_eta = sig
  type t
  val id : t -> t
end

module Make_eta (X : Arg_eta) = struct
  let y = X.id 6
end
